# claude-code

./: README.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: README.md  deslop.md
clarify/.claude-plugin/: plugin.json
clarify/commands/: clarify.md
clarify/skills/clarify/: SKILL.md
commands/: README.md
commands/deslop/: plugin.json
commands/deslop/commands/: deslop.md
commands/dig/: dig.md  plugin.json
commands/fix-ci/.claude-plugin/: plugin.json
commands/fix-ci/commands/: fix-ci.md
decomposition/: README.md
decomposition/.claude-plugin/: plugin.json
decomposition/commands/: decomposition.md
deslop/: README.md
deslop/commands/: deslop.md
deslop/skills/deslop/: SKILL.md
dig/: README.md
dig/.claude-plugin/: plugin.json
dig/commands/: dig.md
dig/skills/dig/: SKILL.md
examples/: basic_usage.py
fix-ci/: README.md
fix-ci/commands/: fix-ci.md
fix-ci/skills/fix-ci/: SKILL.md
src/claude_code/: __init__.py  utils.py
tests/: __init__.py  test_utils.py
